[skip] Fixed overlap when editing a comment (1m)

--- a/app/assets/stylesheets/houston/feedback/feedback.scss
+++ b/app/assets/stylesheets/houston/feedback/feedback.scss
@@ -114,7 +114,7 @@
     font-weight: 400;
     line-height: 1em;
     margin: 0;
-    height: 1em;
+    min-height: 1em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
